--- a/public/styles/tweet.css
+++ b/public/styles/tweet.css
@@ -52,6 +52,7 @@ div.right {
 
 div.text {
   padding: 2em;
+  overflow-wrap: break-word;
 }
 
 footer {
